--- a/src/component/NavBar/NavBar.css
+++ b/src/component/NavBar/NavBar.css
@@ -33,7 +33,7 @@ nav{
     top: 0;
     width: 100%;
     z-index: 998;
-    /* background-color: black; */
+    background-color: var(--background-color_w);
 }
 nav .navLogo{
     display: flex;
