--- a/src/component/Cart/Cart.css
+++ b/src/component/Cart/Cart.css
@@ -184,6 +184,7 @@
     background-color: rgb(255, 83, 83);
     border-radius: 2px;
     padding: 0.5rem 1rem;
+    cursor: pointer;
 }
 
 .CheckOut-Banner{
@@ -231,7 +232,7 @@
 }
 .CheckOut-Banner .CheckOut-wrapper .CheckOutPrice-Btn{
     width: 100%;
-    margin: 1.5rem 0 1.5rem 0;
+    margin: 1.25rem 0 1.25rem 0;
 }
 .CheckOut-Banner .CheckOut-wrapper .CheckOutPrice-Btn span{
     width: 50%;
