--- a/src/component/PaymentMethod/PaymentMethod.css
+++ b/src/component/PaymentMethod/PaymentMethod.css
@@ -148,7 +148,7 @@
         font-size: 5rem;
     }
 }
-@media (max-width: px) {
+@media (max-width: 460px) {
     .PaymentMethod-header h1{
         font-size: 4.5rem;
     }
@@ -185,6 +185,13 @@
         font-size: 1.5rem;
         width: 55%;
         text-align: center;
+    }
+}
+@media (max-width: 768px) {
+    .PaymentMethod-content{
+        margin: 0 auto;
+        padding: 120px 2rem 25px 2rem;
+        max-width: 107rem;
     }
 }
 @media (max-width: 725px) {
