--- a/src/component/ProductDetails/ProductDetails.css
+++ b/src/component/ProductDetails/ProductDetails.css
@@ -267,3 +267,389 @@ input[type="number"] {
     font-weight: 500;
     cursor: pointer;
 }
+
+@media (max-width: 1350px) {
+    .ProductDetails-wrapper{
+        gap: 3rem;
+    }
+    .ProductDetails-content .Product-description{
+        width: 90%;
+        font-size: 1.25rem;
+    }
+    .ProductDetails-content .Product-title{
+        font-size: 2.75rem;
+    }
+    .productInStock{
+        width: 90%;
+    }
+    .ProductDetails-content hr{
+        width: 90%;
+    }
+    .Product-Quantity{
+        width: 90%;
+    }
+    .Product-Btns{
+        width: 90%;
+    }
+    .Product-price-dis .Product-discounted-price{
+        font-size: 2.5rem;
+    }
+    .Product-price-dis .discount-discount{
+        font-size: 1.05rem;
+        padding: 0.5rem 1rem;
+    }
+    .Product-price .Product-Actual-price{
+        font-size: 1.3rem;
+    }
+    .ProductDetails-content .Product-stock{
+        font-size: 1rem;
+    }
+}
+@media (max-width: 1300px) {
+    .ProductDetails-content{
+        gap: 1.75rem;
+    }
+}
+@media (max-width: 1250px) {
+    .ProductDetails-content{
+        gap: 1.5rem;
+    }
+}
+@media (max-width: 1200px) {
+    .ProductDetails-wrapper{
+        gap: 2.5rem;
+    }
+    .ProductDetails-content .Product-description{
+        width: 100%;
+        font-size: 1.1rem;
+    }
+    .ProductDetails-content .Product-title{
+        font-size: 2.6rem;
+    }
+    .productInStock{
+        width: 100%;
+    }
+    .ProductDetails-content hr{
+        width: 100%;
+    }
+    .Product-Quantity{
+        width: 100%;
+    }
+    .Product-Btns{
+        width: 100%;
+    }
+    .Product-price-dis .Product-discounted-price{
+        font-size: 2.3rem;
+    }
+    .Product-price-dis .discount-discount{
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+    }
+    .Product-price .Product-Actual-price{
+        font-size: 1.1rem;
+    }
+    .ProductDetails-content .Product-stock{
+        font-size: 0.9rem;
+    }
+    .ProductDetails-SecondaryImages {
+        width: 12.7%;
+        gap: 1rem;
+    }
+}
+@media (max-width: 1130px) {
+    .ProductDetails-wrapper{
+        gap: 2rem;
+    }
+    .ProductDetails-content .Product-description{
+        width: 100%;
+        font-size: 1.1rem;
+    }
+    .ProductDetails-content .Product-title{
+        font-size: 2.3rem;
+    }
+    .Product-price-dis .Product-discounted-price{
+        font-size: 2rem;
+    }
+    .Product-price-dis .discount-discount{
+        font-size: 1rem;
+        padding: 0.3rem 0.75rem;
+    }
+    .Product-price .Product-Actual-price{
+        font-size: 1rem;
+    }
+    .ProductDetails-content .Product-stock{
+        font-size: 0.9rem;
+    }
+    .stockSec{
+        gap: 0.25rem;
+    }
+    .stockSec span{
+        font-size: 1.25rem;
+    }
+    .stockSec span mark{
+        font-size: 1.25rem;
+    }
+    .Livraison span{
+        font-size: 1rem;
+    }
+    .Livraison .LienConditions{
+        gap: 1rem;
+    }
+    .Livraison .LienConditions span{
+        font-size: 0.8rem;
+    }
+    .Product-Quantity input {
+        height: 30px;
+        font-size: 1.25rem;
+    }
+    .Product-Quantity .quantityBtn {
+        height: 30px;
+    }
+    .Product-Btns .Product-add-cart{
+        padding: 0.5rem 1.25rem;
+        font-size: 1.15rem;
+    }
+    .Product-Btns .Product-OrderNow-btn{
+        padding: 0.5rem 1.25rem;
+        font-size: 1.15rem;
+    }
+}
+@media (max-width: 1050px) {
+    .ProductDetails-wrapper{
+        gap: 1.5rem;
+    }
+    .ProductDetails-content{
+        gap: 1.25rem;
+    }
+}
+@media (max-width: 1000px) {
+    .ProductDetails-wrapper{
+        flex-direction: column;
+        gap: 4rem;
+    }
+    .ProductDetails-images{
+        width: 100%;
+    }
+    .ProductDetails-content{
+        gap: 2rem;
+    }
+    .ProductDetails-images-Thumbnail {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .ProductDetails-MainImage {
+        width: 100%;
+        height: 100%;
+    }
+    .ProductDetails-SecondaryImages {
+        display: flex;
+        gap: 0.5rem;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
+    .ProductDetails-SecondaryImages img{
+        flex: 1;
+        max-width: calc(100% / 6 - 0.5rem);
+        height: auto;
+        object-fit: cover;
+    }
+    .ProductDetails-content{
+        width: 100%;
+        gap: 2rem;
+    }
+    .ProductDetails-content .Product-description{
+        width: 100%;
+        font-size: 1.5rem;
+    }
+    .ProductDetails-content .Product-title{
+        font-size: 4rem;
+    }
+    .productInStock{
+        width: 100%;
+    }
+    .ProductDetails-content hr{
+        width: 100%;
+    }
+    .Product-Quantity{
+        width: 100%;
+    }
+    .Product-Btns{
+        width: 100%;
+    }
+    .Product-price-dis .Product-discounted-price{
+        font-size: 3rem;
+    }
+    .Product-price-dis .discount-discount{
+        font-size: 1.5rem;
+        padding: 0.5rem 1rem;
+    }
+    .Product-price .Product-Actual-price{
+        font-size: 1.75rem;
+    }
+    .ProductDetails-content .Product-stock{
+        font-size: 1.15rem;
+    }
+    .stockSec{
+        gap: 0.5rem;
+    }
+    .stockSec span{
+        font-size: 1.6rem;
+    }
+    .stockSec span mark{
+        font-size: 1.6rem;
+    }
+    .Product-Quantity input {
+        height: 40px;
+        font-size: 1.75rem;
+    }
+    .Product-Quantity .quantityBtn {
+        height: 40px;
+    }
+    .Product-Btns .Product-add-cart{
+        padding: 1rem 2rem;
+        font-size: 1.5rem;
+    }
+    .Product-Btns .Product-OrderNow-btn{
+        padding: 1rem 2rem;
+        font-size: 1.5rem;
+    }
+    .Livraison{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    .Livraison span{
+        font-size: 1.5rem;
+    
+    }
+    .Livraison .LienConditions span{
+        font-size: 1.3rem;
+    }
+}
+@media (max-width: 600px) {
+    .ProductDetails-content .Product-description{
+        width: 100%;
+        font-size: 1.5rem;
+    }
+    .ProductDetails-content .Product-title{
+        font-size: 3rem;
+    }
+    .productInStock{
+        width: 100%;
+    }
+    .ProductDetails-content hr{
+        width: 100%;
+    }
+    .Product-Quantity{
+        width: 100%;
+    }
+    .Product-Btns{
+        width: 100%;
+    }
+    .Product-price-dis .Product-discounted-price{
+        font-size: 2.5rem;
+    }
+    .Product-price-dis .discount-discount{
+        font-size: 1.25rem;
+        padding: 0.5rem 1rem;
+    }
+    .Product-price .Product-Actual-price{
+        font-size: 1.5rem;
+    }
+    .ProductDetails-content .Product-stock{
+        font-size: 1.15rem;
+    }
+    .stockSec{
+        gap: 0.5rem;
+    }
+    .stockSec span{
+        font-size: 1.6rem;
+    }
+    .stockSec span mark{
+        font-size: 1.6rem;
+    }
+    .Product-Quantity input {
+        width: 72%;
+        height: 40px;
+        font-size: 1.75rem;
+    }
+    .Product-Quantity .quantityBtn {
+        width: 14%;
+        height: 40px;
+    }
+    .Product-Btns .Product-add-cart{
+        padding: 1rem 2rem;
+        font-size: 1.5rem;
+    }
+    .Product-Btns .Product-OrderNow-btn{
+        padding: 1rem 2rem;
+        font-size: 1.5rem;
+    }
+    .Livraison{
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    .Livraison span{
+        font-size: 1.25rem;
+    
+    }
+    .Livraison .LienConditions span{
+        font-size: 1.1rem;
+    }
+}
+@media (max-width: 450px) {
+    .ProductDetails-content .Product-description{
+        font-size: 1.25rem;
+    }
+    .ProductDetails-content .Product-title{
+        font-size: 2.5rem;
+    }
+    .Product-price-dis .Product-discounted-price{
+        font-size: 2rem;
+    }
+    .Product-price-dis .discount-discount{
+        font-size: 1.1rem;
+        padding: 0.5rem 1rem;
+    }
+    .Product-price .Product-Actual-price{
+        font-size: 1.35rem;
+    }
+    .ProductDetails-content .Product-stock{
+        font-size: 1.15rem;
+    }
+    .stockSec span{
+        font-size: 1.35rem;
+    }
+    .stockSec span mark{
+        font-size: 1.35rem;
+    }
+    .Product-Quantity input {
+        width: 72%;
+        height: 40px;
+        font-size: 1.5rem;
+    }
+    .Livraison span{
+        font-size: 1.1rem;
+    }
+    .Livraison .LienConditions span{
+        font-size: 0.9rem;
+    }
+}
+@media (max-width: 768px) {
+    .ProductDetails-wrapper{
+        margin: 0 auto;
+        padding: 100px 2rem 25px 2rem;
+        max-width: 138rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 4rem;
+        width: 100%;
+        height: 100%;
+    }
+}
