--- a/src/component/ProductsList/ProductsList.css
+++ b/src/component/ProductsList/ProductsList.css
@@ -162,3 +162,35 @@
     font-weight: 400;
     border-radius: 5px;
 }
+
+
+@media (max-width: 1050px) {
+    .ProductsList-card{
+        flex: 1 1 calc(50% - 20px);
+    }
+}
+@media (max-width: 877px) {
+    .bannerProductList h1{
+        font-size: 3.5rem;
+    }
+}
+@media (max-width: 777px) {
+    .bannerProductList h1{
+        font-size: 3rem;
+    }
+}
+@media (max-width: 677px) {
+    .bannerProductList h1{
+        font-size: 2.5rem;
+    }
+}
+@media (max-width: 768px) {
+    .ProductsListContent{
+        padding: 100px 2rem 25px 2rem;
+    }
+}
+@media (max-width: 700px) {
+    .ProductsList-card{
+        flex: 1 1 calc(100% - 20px);
+    }
+}
