Changing Landing Page & 80% of App Responsivety

--- a/src/component/Contact/ContactCards/ContactCards.css
+++ b/src/component/Contact/ContactCards/ContactCards.css
@@ -82,6 +82,12 @@
         padding: 180px 2rem 0px 2rem;
         max-width: 107rem;
     }
+    .contactContent .contactContent-Titles h1{
+        text-align: left;
+    }
+    .contactContent .contactContent-Titles h2{
+        text-align: left;
+    }
 }
 @media (max-width: 350px) {
     .contact-card .contact-card-text h3 {
