--- a/src/component/Cart/Cart.css
+++ b/src/component/Cart/Cart.css
@@ -21,6 +21,8 @@
 }
 .productCart-wrapper{
     width: 65%;
+    max-height: 70vh;
+    overflow-y: scroll;
 }
 .productInCart{
     width: 100%;
@@ -91,7 +93,7 @@
     font-size: 1.25rem;
     font-weight: 500;
     color: var(--color);
-    width: 20%;
+    width: 35%;
 }
 .cartProduct-Details-itemLeft span mark{
     font-family: 'Poppins',sans-serif;
@@ -102,7 +104,7 @@
     background-color: transparent;
 }
 .cartProduct-Details-itemLeft .banner-Item{
-    width: 80%;
+    width: 65%;
     background-color: #E5E5E5;
     height: 6px;
     border-radius: 50px;
@@ -235,10 +237,70 @@
     width: 100%;
     margin: 1.25rem 0 1.25rem 0;
 }
+.CheckOut-Banner .CheckOut-wrapper .CheckOutPrice-Btn a{
+    text-decoration: none;
+}
 .CheckOut-Banner .CheckOut-wrapper .CheckOutPrice-Btn span{
     width: 50%;
     background-color: var(--rev-color);
     color: var(--color);
+    padding: 0.75rem 1.5rem;
+    border-radius: 3px;
+    font-family: 'Poppins',sans-serif;
+    font-size: 1.25rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+.noItemFound{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+    gap: 2rem;
+}
+.noItemFound .noItemFound-Icon{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+.noItemFound .noItemFound-title{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+.noItemFound .noItemFound-title h2{
+    font-family: 'Poppins',sans-serif;
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight: 700;
+    color: var(--color);
+}
+.noItemFound .noItemFound-desc{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+.noItemFound .noItemFound-desc p{
+    width: 100%;
+    font-family: 'Poppins',sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
+    text-align: center;
+    color: var(--color);
+}
+.noItemFound .noItemFound-btn{
+    width: 50%;
+    margin-top: 0.75rem;
+    display: flex;
+    justify-content: center;
+}
+.noItemFound .noItemFound-btn a{
+    text-decoration: none;
+}
+.noItemFound .noItemFound-btn span{
+    background-color: var(--color);
+    color: var(--rev-color);
     padding: 0.75rem 1.5rem;
     border-radius: 3px;
     font-family: 'Poppins',sans-serif;
