--- a/src/component/MakeOrder/MakeOrder.css
+++ b/src/component/MakeOrder/MakeOrder.css
@@ -31,6 +31,12 @@
     font-size: 2.25rem;
     font-weight: 700;
 }
+.orderForm form{
+    width: 100%;
+    gap: 2rem;
+    display: flex;
+    flex-direction: column;
+}
 .orderForm .orderInputs{
     display: flex;
     width: 100%;
@@ -63,8 +69,8 @@
     width: 50%;
     margin-top: 1rem;
 }
-.orderForm .order-btn span{
-    width: 100%;
+.orderForm .order-btn button{
+    width: fit-content;
     background-color: var(--color);
     font-family: 'Poppins',sans-serif;
     color: var(--rev-color);
@@ -73,8 +79,7 @@
     border-radius: 2px;
     padding: 1rem 2rem;
 }
-.orderForm .order-btn span:hover{
-    width: 100%;
+.orderForm .order-btn button:hover{
     background-color: transparent;
     font-family: 'Poppins',sans-serif;
     color: var(--color);
@@ -109,6 +114,7 @@
     gap: 2rem;
     border-bottom: 1px solid #707070;
     padding: 1rem 0;
+    position: relative;
 }
 .ordredProducts-Details .ordredProduct-banner .ordredproduct-img{
     width: 15%;
@@ -164,6 +170,13 @@
     opacity:0.8;
     font-size: 1.2rem;
     font-weight: 500;
+}
+.removeProductCart{
+    position: absolute;
+    top: 12.5px;
+    right: 0;
+    color: #707070;
+    cursor: pointer;
 }
 .ordredProducts-Details .ordredProducts-pricing{
     display: flex;
