--- a/src/component/ProductDetails/ProductDetails.css
+++ b/src/component/ProductDetails/ProductDetails.css
@@ -148,7 +148,7 @@
     border-radius: 50px;
 }
 .productStillInStock{
-    width: 10%;
+    width: 50%;
     height: 6px;
     border-radius: 50px;
     background-color: rgb(255, 83, 83);
@@ -241,6 +241,16 @@ input[type="number"] {
     font-weight: 500;
     border-radius: 2px;
     cursor: pointer;
+}
+.Product-Btns .Product-OrderNow-btn:disabled {
+    cursor: not-allowed;
+    opacity: 0.6;
+    position: relative;
+}
+.Product-Btns .Product-add-cart:disabled {
+    cursor: not-allowed;
+    opacity: 0.6;
+    position: relative;
 }
 .Livraison{
     display: flex;
