--- a/src/component/Products/Products.css
+++ b/src/component/Products/Products.css
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 calc(25% - 20px);
+    /* max-width: 25%; */
     gap: 1rem;
     cursor: pointer;
     position: relative;
