--- a/src/component/ProductsList/ProductsList.css
+++ b/src/component/ProductsList/ProductsList.css
@@ -70,6 +70,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 calc(25% - 20px);
+    max-width: 25%;
     cursor: pointer;
     border-radius: 5px;
 }
@@ -97,6 +98,25 @@
     color: #2d2e32;
     padding: 5px;
     border-radius: 5px;
+}
+.ProductsList-card .ProductsList-img .productStockAlert{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    right: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    background-color: var(--color);
+    padding: 15px 0px;
+    text-align: center;
+    z-index: 10;
+}
+.ProductsList-card .ProductsList-img .productStockAlert span{
+    font-family: 'Poppins',sans-serif;
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: var(--rev-color);
+    text-transform: uppercase;
 }
 .ProductsList-card .ProductsList-details{
     display: flex;
