--- a/src/component/ProductsList/ProductsList.css
+++ b/src/component/ProductsList/ProductsList.css
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 calc(25% - 20px);
-    max-width: 25%;
+    /* max-width: 25%; */
     cursor: pointer;
     border-radius: 5px;
 }
@@ -110,6 +110,7 @@
     padding: 15px 0px;
     text-align: center;
     z-index: 10;
+    opacity: 0.8;
 }
 .ProductsList-card .ProductsList-img .productStockAlert span{
     font-family: 'Poppins',sans-serif;
