--- a/src/component/ProductsList/ProductsList.css
+++ b/src/component/ProductsList/ProductsList.css
@@ -64,14 +64,13 @@
 .ProductsListCards{
     display: flex;
     gap: 20px;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
 .ProductsList-card{
     display: flex;
     flex-direction: column;
     flex: 1 1 calc(25% - 20px);
-    /* max-width: 25%; */
+    max-width: calc(25% - 20px);
     cursor: pointer;
     border-radius: 5px;
 }
@@ -189,6 +188,7 @@
 @media (max-width: 1050px) {
     .ProductsList-card{
         flex: 1 1 calc(50% - 20px);
+        max-width: calc(50% - 20px);
     }
 }
 @media (max-width: 877px) {
@@ -214,5 +214,6 @@
 @media (max-width: 700px) {
     .ProductsList-card{
         flex: 1 1 calc(100% - 20px);
+        max-width: calc(100% - 20px);
     }
 }
